--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
+:root{
+  --text-color: #fff;
+  --background: url(bg.jpg);
+}
+
 * {
   box-sizing: border-box;
 }
@@ -13,10 +18,13 @@ body {
   overflow: hidden;
   height: 100vh;
   margin: 0;
-  background-color: #0f1d4e;
+
 }
 html{
-  background-color: #0f1d4e;
+  background: var(--background);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .line{
   text-decoration: line-through;
@@ -30,20 +38,41 @@ input{
 
 .main{
   overflow: hidden;
-  color: #fff;
+  color: var(--text-color);
   height: 80%;
   max-width: 20em;
   padding: 20px 50px;
-  background: #1a2d71;
+  background: #263362;
   border-radius: 13px;
 }
 
+input, select, textarea{
+  color: var(--text-color);
+}
+
+.btn{
+  color: var(--text-color);
+  padding: 5px 10px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.btn:hover{
+  background: #1b2342;
+}
+
 @media only screen and (max-width: 768px) {
- 
+  
+  body{
+    display: flex;
+    justify-content: center;
+  }
   .main {
     max-width: 100%; 
-    padding: 20px; 
+    padding: 30px; 
   }
+  
 }
 
 @media only screen and (max-width: 480px) {
@@ -56,6 +85,7 @@ input{
     max-width: 100%;
     height: 100vh; 
     padding: 20px; 
+    text-align: center;
   }
   
   h1 {
